--- a/coustom.css
+++ b/coustom.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-   margin: 0;
+  margin: 0;
   padding: 0;
   background-color: #000;
   color: white;
@@ -66,6 +66,9 @@ body {
 /*==========
 main style
 ==========*/
+main .ui-ux {
+  margin-bottom: 70px;
+}
 main h1 span {
   color: #6daa3e;
 }
@@ -80,45 +83,49 @@ main .m-right img {
 /*========
 About me style
 =========*/
-section{
-  margin:0 10% 50px;
+section {
+  margin: 0 10% 50px;
 }
-section img{
-  display:block;
+section .about-me {
+  margin-bottom: 30px;
+}
+section img {
+  display: block;
   margin: 0 auto;
-  border-radius:5px;
-  backdrop-filter: blur(50px);
-  box-shadow:5px 5px 10px #6daa3e, -5px -5px 10px #6daa3e;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px #6daa3e, -5px -5px 10px #6daa3e;
 }
-section .A-left{
-  margin:0 1rem;
+section .A-left {
+  margin: 0 1rem;
 }
-section .A-right{
-  margin:0 auto;
+section .A-right {
+  margin: 0 auto;
 }
-section .A-right h1{
+section .A-right h1 {
   margin-top: 1rem;
 }
-section .A-right p{
-  margin:10px 0;
+section .A-right p {
+  margin: 10px 0;
 }
-section .A-right .qulifiactrion{
+section .A-right .qulifiactrion {
   /* display:flex; */
-  justify-content:space-between; 
- 
+  justify-content: space-between;
 }
 
-section .A-right .qulifiactrion ul li{
-  list-style:circle;
-
+section .A-right .qulifiactrion ul li {
+  list-style: circle;
 }
 /*==========
 service section
 ============*/
-.service .part-2, .service .part-3, .service .part-1{
-  padding:1rem;
+section .my-service {
+  margin-bottom: 30px;
+}
+.service .part-2,
+.service .part-3,
+.service .part-1 {
+  padding: 1rem;
   height: auto;
-  
 }
 /*=============
 portfolio section
@@ -126,97 +133,103 @@ portfolio section
 /*=============
 contact section
 ===============*/
-.contact #msg{
-  color:#008000;
-  margin-bottom: 20px;
+.contact #msg {
+  color: #008000;
+  margin: 20px 0;
 }
 
-.contact .left-contact h3{
-  margin:3px 0;
+section .Contact {
+  margin-bottom: 30px;
 }
-.contact .left-contact h1{
-  margin-bottom:30px;
+section .social-icon {
+  margin: 20px 0 0 0;
+}
+.contact .left-contact h3 {
+  margin: 3px 0;
+}
+.contact .left-contact h1 {
+  margin-bottom: 30px;
 }
 
-.contact .left-contact .btn button{
-  margin:20px 0;
-  padding:8px 10px;
+.contact .left-contact .btn button {
+  margin: 20px 0;
+  padding: 8px 10px;
   background: linear-gradient(45deg, #2b6300 0%, #c5ff99 100%);
-  border-radius:5px;
-  transform: 0.5s;;
+  border-radius: 5px;
+  transform: 0.5s;
 }
-.contact .right-contact input{
-  width:100%;
-  margin:0.5rem 0;
-  padding:5px 10px;
-  transition:.3s;
-
+.contact .right-contact input {
+  width: 100%;
+  margin: 0.5rem 0;
+  padding: 5px 10px;
+  transition: 0.3s;
 }
-.contact .right-contact form button{
-  margin:30px 0 0 0;
-  padding:5px 0;
+.contact .right-contact form button {
+  margin: 30px 0 0 0;
+  padding: 5px 0;
   background: linear-gradient(45deg, #2b6300 0%, #c5ff99 100%);
- transition:.3s;
- width: 100%;
+  transition: 0.3s;
+  width: 100%;
 }
-.contact .right-contact input:hover{
-  border:none;
+.contact .right-contact input:hover {
+  border: none;
   outline: none;
-  box-shadow:3px 3px 10px #6daa3e, -3px -3px 10px #6daa3e;
+  box-shadow: 3px 3px 10px #6daa3e, -3px -3px 10px #6daa3e;
 }
-.contact .right-contact textarea{
-  padding:10px 20px;
-  width:100%;
+.contact .right-contact textarea {
+  padding: 10px 20px;
+  width: 100%;
 }
-.contact .right-contact textarea:hover{
-  border:none;
+.contact .right-contact textarea:hover {
+  border: none;
   outline: none;
-  box-shadow:3px 3px 10px #6daa3e, -3px -3px 10px #6daa3e;
+  box-shadow: 3px 3px 10px #6daa3e, -3px -3px 10px #6daa3e;
 }
 
-.contact .right-contact button:hover, .contact .left-contact .btn button:hover{
-    background: linear-gradient(45deg,#c5ff99 0%,  #2b6300 100%);
+.contact .right-contact button:hover,
+.contact .left-contact .btn button:hover {
+  background: linear-gradient(45deg, #c5ff99 0%, #2b6300 100%);
 }
-.contact .right-contact button:active, .contact .left-contact .btn button:active{
-  background:red;
+.contact .right-contact button:active,
+.contact .left-contact .btn button:active {
+  background: red;
 }
 /*============
 footer section
 =============*/
-footer{
-  padding:1.5rem;
-  margin:10px 0 0 0 ;
+footer {
+  padding: 1.5rem;
+  margin: 10px 0 0 0;
 }
-
 
 /*----------- media query---------------*/
 
-@media  screen and (min-width:770px) {
-  main{
-    margin:50px 10%;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    flex-direction:row;
+@media screen and (min-width: 770px) {
+  main {
+    margin: 50px 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
   }
-  #About .A-left{
-    display:flex;
-    align-items:center;
+  #About .A-left {
+    display: flex;
+    align-items: center;
   }
-  #About img{
-    width:700px;
-    height:auto;
+  #About img {
+    width: 700px;
+    height: auto;
   }
-  #About .A-right{
-    margin:0 50px;
+  #About .A-right {
+    margin: 0 50px;
   }
 }
 
-@media  screen and (max-width:769px) {
-  main{
-    margin:200px 0  50px;
+@media screen and (max-width: 769px) {
+  main {
+    margin: 200px 0 50px;
   }
-  main .m-left h2{
-    margin-top:20px;
+  main .m-left h2 {
+    margin-top: 20px;
   }
 }
